[package]
name = "strada"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = "0.32.1"
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
anyhow = "1.0.93"
thiserror = "2.0.3"
actix-web = "4.9.0"
log = "0.4.22"
env_logger = "0.11.5"