[package]
name = "strada"
version = "0.1.0"
edition = "2021"
description = "A lightweight database that runs on the server."
build = "build.rs" 

[dependencies]
rusqlite = "0.32.1"
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
jsonwebtoken = "9.3.0"
anyhow = "1.0.93"
thiserror = "2.0.3"
actix-web = "4.9.0"
log = "0.4.22"
env_logger = "0.11.5"

[profile.dev]
opt-level = 2
debug = false
panic = "abort"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
strip = "debuginfo"